- add custom Money serializer/deserializer for gson to simplify JSON schema
